// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image component should be 32x32 1`] = `
<DocumentFragment>
  <figure
    class="image is-32x32"
  >
    <img
      class=""
      src="http://mydomain.com/image"
    />
  </figure>
</DocumentFragment>
`;

exports[`Image component should be rounded 1`] = `
<DocumentFragment>
  <figure
    class="image"
  >
    <img
      class="is-rounded"
      src="http://mydomain.com/image"
    />
  </figure>
</DocumentFragment>
`;

exports[`Image component should render 1`] = `
<DocumentFragment>
  <figure
    class="image"
  >
    <img
      class=""
      src="http://mydomain.com/image"
    />
  </figure>
</DocumentFragment>
`;
